feat: documentation update limited budget
