# api/storage/api-docs/api-docs.json
@@ -11,8 +11,8 @@
                 "tags": [
                     "NordigenAccounts"
                 ],
-                "summary": "Permet d'obtenir des informations sur l'utilisateur connecté",
-                "description": "Obtiens des informations sur l'utilisateur",
+                "summary": "Permet d'obtenir la liste des comptes associé à l'utilisateur sur 'nordigen'",
+                "description": "Obtiens la liste des comptes associé à l'utilisateur sur 'nordigen'",
                 "operationId": "getNordigenAccount",
                 "responses": {
                     "401": {
@@ -253,7 +253,7 @@
                         }
                     },
                     "200": {
-                        "description": "An example resource",
+                        "description": "OK",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -312,7 +312,7 @@
                 "tags": [
                     "Authentification"
                 ],
-                "summary": "Permet de se connecter",
+                "summary": "Permet de se déconnecter",
                 "description": "Déconnecte l'utilisateur",
                 "operationId": "logout",
                 "responses": {
@@ -333,7 +333,7 @@
                         }
                     },
                     "200": {
-                        "description": "An example resource",
+                        "description": "OK",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -498,8 +498,8 @@
                 "tags": [
                     "LimitedBudgets"
                 ],
-                "summary": "Permet d'obtenir la liste des budgets limités",
-                "description": "Retourne la liste des budgets limités",
+                "summary": "Permet de créer un budget limité",
+                "description": "Crée un budget limité",
                 "operationId": "postLimitedBudgets",
                 "requestBody": {
                     "content": {
@@ -591,8 +591,8 @@
                 "tags": [
                     "LimitedBudgets"
                 ],
-                "summary": "Permet d'obtenir la liste des budgets limités",
-                "description": "Retourne la liste des budgets limités",
+                "summary": "Permet de modifier un budget limité",
+                "description": "Modifie un budget limité",
                 "operationId": "putLimitedBudgets",
                 "parameters": [
                     {
@@ -611,7 +611,7 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/StoreLimitedBudgetRequest"
+                                "$ref": "#/components/schemas/UpdateLimitedBudgetRequest"
                             }
                         }
                     }
@@ -830,6 +830,106 @@
                                                 }
                                             },
                                             "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/api/transactions": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Permet de récupérer une liste de transactions",
+                "description": "Obtiens les transactions de l'utilisateur paginé",
+                "operationId": "getTransactions",
+                "responses": {
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Unauthenticated."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "200": {
+                        "description": "Lorsqu'un utilisateur est connecté et qu'il possède déjà un compte",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "current_page": {
+                                            "type": "number",
+                                            "example": "1"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": "153"
+                                                    },
+                                                    "label": {
+                                                        "type": "string",
+                                                        "example": "VIREMENT EN VOTRE FAVEUR CONDUENT BUSINESS SOLUTIONS (FRA"
+                                                    },
+                                                    "montant": {
+                                                        "type": "number",
+                                                        "example": "1250"
+                                                    },
+                                                    "monnaie": {
+                                                        "type": "string",
+                                                        "example": "EUR"
+                                                    },
+                                                    "dateTransaction": {
+                                                        "type": "string",
+                                                        "format": "date",
+                                                        "example": "2022-03-28"
+                                                    },
+                                                    "status": {
+                                                        "type": "string",
+                                                        "example": "booked"
+                                                    },
+                                                    "account_id": {
+                                                        "type": "string",
+                                                        "example": "e806f95a-6455-46a0-f357-d4d15fe4fd90"
+                                                    },
+                                                    "category_id": {
+                                                        "type": "integer",
+                                                        "example": "1"
+                                                    },
+                                                    "created_at": {
+                                                        "type": "string",
+                                                        "format": "date",
+                                                        "example": "2022-03-14T23:29:03.000000Z"
+                                                    },
+                                                    "updated_at": {
+                                                        "type": "string",
+                                                        "format": "date",
+                                                        "example": "2022-03-14T23:29:03.000000Z"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
                                         }
                                     },
                                     "type": "object"
@@ -1091,8 +1191,8 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "Permet d'obtenir des informations sur l'utilisateur connecté",
-                "description": "Obtiens des informations sur l'utilisateur",
+                "summary": "Permet de modifier des information de l'utilisateur",
+                "description": "Modifie les informations de l'utilisateur",
                 "operationId": "updateUser",
                 "requestBody": {
                     "content": {
@@ -1255,7 +1355,20 @@
                 },
                 "type": "object"
             },
-            "UpdateLimitedBudgetRequest": {},
+            "UpdateLimitedBudgetRequest": {
+                "properties": {
+                    "amount": {
+                        "type": "number",
+                        "example": "2000.0"
+                    },
+                    "previsionDate": {
+                        "type": "string",
+                        "format": "date",
+                        "example": "2022-03-09"
+                    }
+                },
+                "type": "object"
+            },
             "UpdateTransactionRequest": {},
             "UpdateUserRequest": {
                 "required": [
